# sioma-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/endpoints/: admin.py  admin_users.py  attendance.py  audit.py  auth.py  devices.py  timestamps.py  workers.py
src/core/: config.py  security.py
src/models/: admin.py  attendance.py  audit.py  device.py  worker.py
src/services/: aws_service.py
tests/: test_workers_endpoint.py
