[tool.poetry]
name = "sioma-api"
version = "0.1.0"
description = "API for Sioma Dashboard to handle worker data and timestamps."
authors = ["Gemini"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
boto3 = "^1.33.1"
pydantic = {extras = ["email"], version = "^2.5.2"}
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"
moto = {extras = ["s3", "dynamodb"], version = "^4.2.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
